[package]
name = "occlib"
version = "0.1.0"
description = "A Rust Library Template for the Open Cinema Collective"
edition = "2018"
license = "MIT"
repository = "https://github.com/opencinemac/occlib-rs"
authors = ["Open Cinema Collective", "Billy Peake"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
